Atom/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
03:42:37 **** Rebuild of configuration Debug for project i2c_test ****
Info: Internal Builder is used for build
i586-poky-linux-gcc "-IV:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux/usr/include/mraa" -O0 -g3 -Wall -c -fmessage-length=0 "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -m32 -march=i586 -c -ffunction-sections -fdata-sections -o "src\\i2c_test.o" "..\\src\\i2c_test.c" 
i586-poky-linux-gcc "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -lmraa -o i2c_test "src\\i2c_test.o" 
03:42:54 **** Incremental Build of configuration Debug for project i2c_test ****
Info: Internal Builder is used for build
i586-poky-linux-gcc "-IV:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux/usr/include/mraa" -O0 -g3 -Wall -c -fmessage-length=0 "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -m32 -march=i586 -c -ffunction-sections -fdata-sections -o "src\\i2c_test.o" "..\\src\\i2c_test.c" 
..\src\i2c_test.c: In function 'main':
..\src\i2c_test.c:61:10: error: redeclaration of 'transmission_buf' with no linkage
  uint8_t transmission_buf[6];   //buffer
          ^
..\src\i2c_test.c:53:10: note: previous declaration of 'transmission_buf' was here
  uint8_t transmission_buf[6];
          ^
..\src\i2c_test.c:67:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
03:43:15 **** Incremental Build of configuration Debug for project i2c_test ****
Info: Internal Builder is used for build
i586-poky-linux-gcc "-IV:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux/usr/include/mraa" -O0 -g3 -Wall -c -fmessage-length=0 "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -m32 -march=i586 -c -ffunction-sections -fdata-sections -o "src\\i2c_test.o" "..\\src\\i2c_test.c" 
..\src\i2c_test.c: In function 'main':
..\src\i2c_test.c:61:10: error: redeclaration of 'transmission_buf' with no linkage
  uint8_t transmission_buf[6];   //buffer
          ^
..\src\i2c_test.c:53:10: note: previous declaration of 'transmission_buf' was here
  uint8_t transmission_buf[6];
          ^
03:43:35 **** Incremental Build of configuration Debug for project i2c_test ****
Info: Internal Builder is used for build
i586-poky-linux-gcc "-IV:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux/usr/include/mraa" -O0 -g3 -Wall -c -fmessage-length=0 "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -m32 -march=i586 -c -ffunction-sections -fdata-sections -o "src\\i2c_test.o" "..\\src\\i2c_test.c" 
i586-poky-linux-gcc "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -lmraa -o i2c_test "src\\i2c_test.o" 
Info: Nothing to build for i2c_test
13:01:37 **** Incremental Build of configuration Debug for project i2c_test ****
Info: Internal Builder is used for build
i586-poky-linux-gcc "-IV:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux/usr/include/mraa" -O0 -g3 -Wall -c -fmessage-length=0 "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -m32 -march=i586 -c -ffunction-sections -fdata-sections -o "src\\i2c_test.o" "..\\src\\i2c_test.c" 
i586-poky-linux-gcc "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -lmraa -o i2c_test "src\\i2c_test.o" 
Info: Nothing to build for i2c_test
13:03:01 **** Incremental Build of configuration Debug for project i2c_test ****
Info: Internal Builder is used for build
i586-poky-linux-gcc "-IV:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux/usr/include/mraa" -O0 -g3 -Wall -c -fmessage-length=0 "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -m32 -march=i586 -c -ffunction-sections -fdata-sections -o "src\\i2c_test.o" "..\\src\\i2c_test.c" 
..\src\i2c_test.c: In function 'main':
..\src\i2c_test.c:62:9: warning: character constant too long for its type
  printf('%x, %x\n',transmission_buf[0], transmission_buf[1]);
         ^
..\src\i2c_test.c:62:2: warning: passing argument 1 of 'printf' makes pointer from integer without a cast
  printf('%x, %x\n',transmission_buf[0], transmission_buf[1]);
  ^
In file included from V:\Edison\iotdk-ide-win\devkit-x86\sysroots\i586-poky-linux/usr/include/mraa/pwm.h:43:0,
                 from V:\Edison\iotdk-ide-win\devkit-x86\sysroots\i586-poky-linux/usr/include/mraa.h:30,
                 from ..\src\i2c_test.c:25:
V:\Edison\iotdk-ide-win\devkit-x86\sysroots\i586-poky-linux/usr/include/stdio.h:362:12: note: expected 'const char * __restrict__' but argument is of type 'int'
 extern int printf (const char *__restrict __format, ...);
            ^
i586-poky-linux-gcc "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -lmraa -o i2c_test "src\\i2c_test.o" 
13:03:44 **** Incremental Build of configuration Debug for project i2c_test ****
Info: Internal Builder is used for build
i586-poky-linux-gcc "-IV:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux/usr/include/mraa" -O0 -g3 -Wall -c -fmessage-length=0 "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -m32 -march=i586 -c -ffunction-sections -fdata-sections -o "src\\i2c_test.o" "..\\src\\i2c_test.c" 
..\src\i2c_test.c: In function 'main':
..\src\i2c_test.c:62:9: warning: character constant too long for its type
  printf('%u, %u\n',transmission_buf[0], transmission_buf[1]);
         ^
..\src\i2c_test.c:62:2: warning: passing argument 1 of 'printf' makes pointer from integer without a cast
  printf('%u, %u\n',transmission_buf[0], transmission_buf[1]);
  ^
In file included from V:\Edison\iotdk-ide-win\devkit-x86\sysroots\i586-poky-linux/usr/include/mraa/pwm.h:43:0,
                 from V:\Edison\iotdk-ide-win\devkit-x86\sysroots\i586-poky-linux/usr/include/mraa.h:30,
                 from ..\src\i2c_test.c:25:
V:\Edison\iotdk-ide-win\devkit-x86\sysroots\i586-poky-linux/usr/include/stdio.h:362:12: note: expected 'const char * __restrict__' but argument is of type 'int'
 extern int printf (const char *__restrict __format, ...);
            ^
i586-poky-linux-gcc "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -lmraa -o i2c_test "src\\i2c_test.o" 
13:31:28 **** Incremental Build of configuration Debug for project i2c_test ****
Info: Internal Builder is used for build
i586-poky-linux-gcc "-IV:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux/usr/include/mraa" -O0 -g3 -Wall -c -fmessage-length=0 "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -m32 -march=i586 -c -ffunction-sections -fdata-sections -o "src\\i2c_test.o" "..\\src\\i2c_test.c" 
i586-poky-linux-gcc "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -lmraa -o i2c_test "src\\i2c_test.o" 
14:30:42 **** Rebuild of configuration Debug for project pca9685_test ****
Info: Internal Builder is used for build
i586-poky-linux-g++ "-IV:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux/usr/include/upm" "-IV:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux/usr/include/mraa" -O0 -g3 -Wall -c -fmessage-length=0 "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -m32 -march=i586 -c -ffunction-sections -fdata-sections -o "src\\pca9685_test.o" "..\\src\\pca9685_test.cpp" 
i586-poky-linux-g++ "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -lmraa -o pca9685_test "src\\pca9685_test.o" 
14:42:31 **** Incremental Build of configuration Debug for project pca9685_test ****
Info: Internal Builder is used for build
i586-poky-linux-g++ "-IV:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux/usr/include/upm" "-IV:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux/usr/include/mraa" -O0 -g3 -Wall -c -fmessage-length=0 "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -m32 -march=i586 -c -ffunction-sections -fdata-sections -o "src\\pca9685_test.o" "..\\src\\pca9685_test.cpp" 
i586-poky-linux-g++ "-IV:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux/usr/include/upm" "-IV:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux/usr/include/mraa" -O0 -g3 -Wall -c -fmessage-length=0 "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -m32 -march=i586 -c -ffunction-sections -fdata-sections -o "src\\pca9685.o" "..\\src\\pca9685.cxx" 
i586-poky-linux-g++ "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -lmraa -o pca9685_test "src\\pca9685_test.o" "src\\pca9685.o" 
Info: Nothing to build for pca9685_test
